@@ -2,6 +2,7 @@
  * ES plugin for Custom IOS.
  *
  * Copyright (C) 2010 Waninkoko.
+ * Copyright (C) 2011 davebaol.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -22,7 +23,7 @@
 #include "types.h"
 
 /* Constants */
-#define FILENAME	"esconfig.cfg"
+#define FILENAME	"/sys/esconfig.cfg"
 
 
 s32 __Config_Create(void)
@@ -35,7 +36,7 @@ s32 __Config_Create(void)
 		return ret;
 
 	/* Create file */
-	ret = ISFS_CreateFile("/tmp/" FILENAME);
+	ret = ISFS_CreateFile(FILENAME);
 
 	/* Close ISFS */
 	ISFS_Close();
@@ -43,12 +44,38 @@ s32 __Config_Create(void)
 	return ret;
 }
 
+s32 __Config_Delete(void)
+{
+	s32 ret;
+
+	/* Open ISFS */
+	ret = ISFS_Open();
+	if (ret < 0)
+		return ret;
+
+	/* Delete file */
+	ret = ISFS_Delete(FILENAME);
+
+	/* Close ISFS */
+	ISFS_Close();
+
+	return ret;
+}
+
+// NOTE:
+// This function is called by the main that is 
+// out of the patched es life cycle. 
+// So for debugging purpose don't use ES_printf here,
+// use write instead.
 s32 Config_Load(void *cfg, u32 size)
 {
 	s32 fd, ret;
 
+	//write("ESP: Loading config file "FILENAME"\n");
+
 	/* Open config file */
-	fd = os_open("/" FILENAME, ISFS_OPEN_READ);
+	fd = os_open(FILENAME, ISFS_OPEN_READ);
+	//write("ESP: Config file ");write(fd<0? "found\n": "NOT found\n");
 	if (fd < 0)
 		return fd;
 
@@ -57,6 +84,9 @@ s32 Config_Load(void *cfg, u32 size)
 
 	/* Close config */
 	os_close(fd);
+
+	/* Delete config file */
+	__Config_Delete();
 
 	return ret;
 }
@@ -69,7 +99,7 @@ s32 Config_Save(void *cfg, u32 size)
 	__Config_Create();
 
 	/* Open config file */
-	fd = os_open("/tmp/" FILENAME, ISFS_OPEN_WRITE);
+	fd = os_open(FILENAME, ISFS_OPEN_WRITE);
 	if (fd < 0)
 		return fd;
 
@@ -80,4 +110,4 @@ s32 Config_Save(void *cfg, u32 size)
 	os_close(fd);
 
 	return ret;
-}
+}                   
