@@ -2,12 +2,13 @@
 #define _IOCTL_H_
 
 /* IOCTL commands */
-#define IOCTL_ES_LAUNCH		0x08
-#define IOCTL_ES_KOREANCHECK	0x45
-
+#define IOCTL_ES_LAUNCH       0x08
+#define IOCTL_ES_DIVERIFY     0x1C
+#define IOCTL_ES_KOREANCHECK  0x45
+ 
 /* Custom commands */
-#define IOCTL_ES_FAKELAUNCH	0xA0
-#define IOCTL_ES_LEET		0x1337
+#define IOCTL_ES_FAKELAUNCH   0xA0
+#define IOCTL_ES_LEET         0x1337
 
 #endif
 
