@@ -2,6 +2,7 @@
  * ES plugin for Custom IOS.
  *
  * Copyright (C) 2010 Waninkoko.
+ * Copyright (C) 2011 davebaol.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
