@@ -9,6 +9,12 @@
 struct esConfig {
 	/* Fake launch mode */
 	u32 fakelaunch;
+
+	/* ios to launch instead of the requested one */
+	u32 ios;
+
+	/* title_id of the game requesting ios reload */
+	u64 title_id;
 };
 
 /* Prototypes */
